# aibrake

./: .dockerignore  .env.example  .gitignore  BENCHMARK_10_AGENTS.md  BETA_FEEDBACK_TEMPLATE.md  BRANDING_CANDIDATES.md  CASE_STUDIES.md  CHANGELOG.md  CLAUDE.md  CODING_AGENT_ADAPTER.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  HERMES_ADAPTER.md  IMPLEMENTATION_NOTES.md  INTEGRATION_GUIDE.md  LAUNCH_CHECKLIST.md  LICENSE  OPENCLAW_ADAPTER.md  PARTNER_ONBOARDING.md  PARTNER_VALIDATION_SCRIPT.md  PRODUCT.md  PRODUCTION_DEPLOY_RUNBOOK.md  PYTHON_SDK.md  README.md  ROADMAP_TO_1_0.md  SECURITY.md  SELF_TRIAL_CLAUDE_CODE_LOG.md  SELF_TRIAL_CLAUDE_CODE_REPORT.md  SIMULATION_100_PARTNERS_WEEK_REPORT.md  SIMULATION_10_PARTNERS_REPORT.md  STAGE_0_1_1_AUDIT_REPORT.md  STAGE_0_1_AUDIT_REPORT.md  X402_LISTING.md  package-lock.json  package.json  render.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
benchmarks/: ODYSSEY_RESULTS.md  RESULTS.md  corpus.ts  lcr-history.jsonl  odyssey-corpus.ts  odyssey-history.jsonl  run-lcr.ts  run-odyssey.ts
docs/: HERMES_BEHAVIOR_TESTS.md  HERMES_INSTALL.md  HERMES_LIVE_TEST.md  LAUNCH_KIT.md  POSITION_VS_WEBWRIGHT.md  PRICING_ECONOMICS.md
examples/: 40-dollar-retry-storm.ts  coding-agent-integration.ts  hosted-check-downgrade.ts  hosted-check-shadow.ts  openclaw-quickstart.ts  the-40-dollar-retry-storm.json
python/: Dockerfile.test  README.md  pyproject.toml
python/agent_spend_guard/: __init__.py  client.py  errors.py
python/examples/: art_pipeline_shadow.py  downgrade.py  shadow.py
python/tests/: conftest.py  test_client.py  test_integration.py  test_stage_05_error_kinds.py
scripts/: _apply-aibrake-rename.mjs  _apply-aibrake.mjs  _apply-github-org.mjs  check-domains.mjs  (+7 more)
(+91 files in other folders)
